--- a/BMWM.html
+++ b/BMWM.html
@@ -2,19 +2,20 @@
 <html>
  <head>
   <title>KIBERLIVE</title>
+  <meta charset="utf-8">
   <link rel="shortcut icon" href="head-item.png" type="image/png">
  </head>
  <body bgcolor="#3366FF" background="item(2).jpg" bgprooerties="fixed">
 
 <ul>
-  <li><a href="kon.html">Контент</a></li>
+  <li><a href="kon.html">ГЉГ®Г­ГІГҐГ­ГІ</a></li>
   <li><a href="ind.html">Home</a></li>
-  <li><a href="Kontakt.html">Контакт</a></li>
+  <li><a href="Kontakt.html">ГЉГ®Г­ГІГ ГЄГІ</a></li>
 </ul>
 
 
   <center><h1><font color ="white">BMW M</h1></<center>
-  <center><h3>BMW M - это особая линейка автомобилей BMW!Эти автомобили оснащенны осыбым двигателем,подвеской.Литера «M» в названии компании M GmbH всегда указывала на принадлежность моделей к узкому кругу настоящих спортивных автомобилей. Современные представители серии М продолжают укреплять престиж марки. Среди них — BMW M2, BMW M235i xDrive Gran Coupe, BMW M3 Competition, BMW M4 Competition Coupe, BMW M440i xDrive Cabrio, BMW M5 Competition,  BMW M760Li xDrive, а также BMW X3 M и BMW X4 M.
+  <center><h3>BMW M - ГЅГІГ® Г®Г±Г®ГЎГ Гї Г«ГЁГ­ГҐГ©ГЄГ  Г ГўГІГ®Г¬Г®ГЎГЁГ«ГҐГ© BMW!ГќГІГЁ Г ГўГІГ®Г¬Г®ГЎГЁГ«ГЁ Г®Г±Г­Г Г№ГҐГ­Г­Г» Г®Г±Г»ГЎГ»Г¬ Г¤ГўГЁГЈГ ГІГҐГ«ГҐГ¬,ГЇГ®Г¤ГўГҐГ±ГЄГ®Г©.Г‹ГЁГІГҐГ°Г  В«MВ» Гў Г­Г Г§ГўГ Г­ГЁГЁ ГЄГ®Г¬ГЇГ Г­ГЁГЁ M GmbH ГўГ±ГҐГЈГ¤Г  ГіГЄГ Г§Г»ГўГ Г«Г  Г­Г  ГЇГ°ГЁГ­Г Г¤Г«ГҐГ¦Г­Г®Г±ГІГј Г¬Г®Г¤ГҐГ«ГҐГ© ГЄ ГіГ§ГЄГ®Г¬Гі ГЄГ°ГіГЈГі Г­Г Г±ГІГ®ГїГ№ГЁГµ Г±ГЇГ®Г°ГІГЁГўГ­Г»Гµ Г ГўГІГ®Г¬Г®ГЎГЁГ«ГҐГ©. Г‘Г®ГўГ°ГҐГ¬ГҐГ­Г­Г»ГҐ ГЇГ°ГҐГ¤Г±ГІГ ГўГЁГІГҐГ«ГЁ Г±ГҐГ°ГЁГЁ ГЊ ГЇГ°Г®Г¤Г®Г«Г¦Г ГѕГІ ГіГЄГ°ГҐГЇГ«ГїГІГј ГЇГ°ГҐГ±ГІГЁГ¦ Г¬Г Г°ГЄГЁ. Г‘Г°ГҐГ¤ГЁ Г­ГЁГµ вЂ” BMW M2, BMW M235i xDrive Gran Coupe, BMW M3 Competition, BMW M4 Competition Coupe, BMW M440i xDrive Cabrio, BMW M5 Competition,  BMW M760Li xDrive, Г  ГІГ ГЄГ¦ГҐ BMW X3 M ГЁ BMW X4 M.
 </h3> </<center>
   <center><img src="item(6).jpg" width= "70%" /></<center>
  </body>
