--- a/BMWM.html
+++ b/BMWM.html
@@ -8,14 +8,14 @@
  <body bgcolor="#3366FF" background="item(2).jpg" bgprooerties="fixed">
 
 <ul>
-  <li><a href="kon.html">Êîíòåíò</a></li>
+  <li><a href="kon.html">Контент</a></li>
   <li><a href="ind.html">Home</a></li>
-  <li><a href="Kontakt.html">Êîíòàêò</a></li>
+  <li><a href="Kontakt.html">Контакт</a></li>
 </ul>
 
 
   <center><h1><font color ="white">BMW M</h1></<center>
-  <center><h3>BMW M - ýòî îñîáàÿ ëèíåéêà àâòîìîáèëåé BMW!Ýòè àâòîìîáèëè îñíàùåííû îñûáûì äâèãàòåëåì,ïîäâåñêîé.Ëèòåðà «M» â íàçâàíèè êîìïàíèè M GmbH âñåãäà óêàçûâàëà íà ïðèíàäëåæíîñòü ìîäåëåé ê óçêîìó êðóãó íàñòîÿùèõ ñïîðòèâíûõ àâòîìîáèëåé. Ñîâðåìåííûå ïðåäñòàâèòåëè ñåðèè Ì ïðîäîëæàþò óêðåïëÿòü ïðåñòèæ ìàðêè. Ñðåäè íèõ — BMW M2, BMW M235i xDrive Gran Coupe, BMW M3 Competition, BMW M4 Competition Coupe, BMW M440i xDrive Cabrio, BMW M5 Competition,  BMW M760Li xDrive, à òàêæå BMW X3 M è BMW X4 M.
+  <center><h3>BMW M - это особая линейка автомобилей BMW!Эти автомобили оснащенны осыбым двигателем,подвеской.Литера «M» в названии компании M GmbH всегда указывала на принадлежность моделей к узкому кругу настоящих спортивных автомобилей. Современные представители серии М продолжают укреплять престиж марки. Среди них — BMW M2, BMW M235i xDrive Gran Coupe, BMW M3 Competition, BMW M4 Competition Coupe, BMW M440i xDrive Cabrio, BMW M5 Competition,  BMW M760Li xDrive, а также BMW X3 M и BMW X4 M.
 </h3> </<center>
   <center><img src="item(6).jpg" width= "70%" /></<center>
  </body>
